fixed fontsize as design

--- a/frontend/javascripts/app/views/directives/status-bar.html
+++ b/frontend/javascripts/app/views/directives/status-bar.html
@@ -18,7 +18,7 @@
 -->
 <div>
   <!-- <div class="status-bar" ng-show="!show()"></div> -->
-  <div class="status-bar SH" ng-show="show()">
+  <div class="status-bar B2" ng-show="show()">
     <!-- <span class="experiment-result" ng-show="footer_experiment.completed_at && !is_holding" ng-class="footer_experiment.completion_status === 'success' ? 'success' : 'failed'">
       <span ng-show="footer_experiment.completion_status === 'success'">EXPERIMENT COMPLETE</span>
     <span ng-show="footer_experiment.completion_status !== 'success'">EXPERIMENT FAILED</span>
