--- a/frontend/javascripts/app/views/directives/chart-well-switch.html
+++ b/frontend/javascripts/app/views/directives/chart-well-switch.html
@@ -20,17 +20,17 @@
   <table>
     <tbody>
       <tr>
-        <th style="font-size: 9px; font-weight: normal" ng-mousedown="dragStart($event, 'corner', 0)" ng-style="{width: row_header_width + 'px'}" class="col-header"></th>
-        <th style="font-size: 9px; font-weight: normal" ng-mousedown="dragStart($event, 'column', col.index)" ng-mouseup="dragStop($event, 'column', col.index)" ng-mousemove="dragged($event, 'column', col.index)" ng-repeat="col in columns" ng-style="{width: getCellWidth() + 'px'}" class="col-header" ng-class="{dragged: col.selected}">
+        <th class="col-header G2" ng-mousedown="dragStart($event, 'corner', 0)" ng-style="{width: row_header_width + 'px'}"></th>
+        <th class="col-header G2" ng-class="{dragged: col.selected}" ng-mousedown="dragStart($event, 'column', col.index)" ng-mouseup="dragStop($event, 'column', col.index)" ng-mousemove="dragged($event, 'column', col.index)" ng-repeat="col in columns" ng-style="{width: getCellWidth() + 'px'}">
           {{col.index + 1}}
         </th>
       </tr>
       <tr ng-repeat="row in rows">
-        <td style="font-size: 9px; font-weight: normal" class="row-header" ng-mousedown="dragStart($event, 'row', row.index)" ng-mousemove="dragged($event, 'row', row.index)" ng-mouseup="dragStop($event, 'row', row.index)" ng-class="{dragged: row.selected}">
+        <td class="row-header G2" ng-mousedown="dragStart($event, 'row', row.index)" ng-mousemove="dragged($event, 'row', row.index)" ng-mouseup="dragStop($event, 'row', row.index)" ng-class="{dragged: row.selected}">
           {{ row.index==0? 'A' : 'B' }}
         </td>
         <td ng-repeat="col in columns" class="well-switch" ng-init="i = (row.index * columns.length) + col.index; well = wells['well_' + i];" ng-mousedown="dragStart($event, 'well', i)" ng-mousemove="dragged($event, 'well', i)" ng-mouseup="dragStop($event, 'well', i)" ng-class="{selected: well.selected, active: well.active}" ng-style="getWellStyle(row, col, well, i)">
-          <div class="well-switch-container" ng-style="getWellContainerStyle(row, col, well, i)" style="font-size: 15pt; line-height: 20pt">
+          <div class="well-switch-container B1" ng-style="getWellContainerStyle(row, col, well, i)">
             <div class="well-switch-bar-container">
               <div class="well-switch-bar" ng-style="getStyleForWellBar(row, col, well, i)">
               </div>
