--- a/frontend/stylesheets/amplification-chart.css.scss
+++ b/frontend/stylesheets/amplification-chart.css.scss
@@ -139,6 +139,14 @@
     color: #00b3ed !important;
   }
   .curve-header {
+    margin-left:0;
+    margin-right:0;
+    height: 100px;
+    display:flex;
+    background: white;
+    box-shadow: 0px 1pt 1pt 1pt grey;
+    margin-bottom: 10px;
+    
     .plot-type-buttons {
       width: 140px !important;
       .buttons-wrapper {
@@ -165,8 +173,8 @@
         background-color: white;
         color: black;
         padding: 6px;
-        font-size: 16px;
-        font-family: 'dinot-regular';
+        // font-size: 16px;
+        // font-family: 'dinot-regular';
         //font-weight: 300;
         border: none;
         border-radius: 10px;
