--- a/frontend/stylesheets/directives/chart-well-switch.css.scss
+++ b/frontend/stylesheets/directives/chart-well-switch.css.scss
@@ -18,8 +18,6 @@
   }
 
   .col-header {
-    font-family: 'dinot-regular';
-    font-size: 12px;
     text-align: center;
 
     &.dragged {
@@ -57,6 +55,7 @@
         top: 0;
         left: 0;
         box-shadow: 0px 0px 5px #000;
+        font-weight: bold;
       }
       .ct-cq-container {
         height: 62px;
