--- a/frontend/stylesheets/results-charts.scss
+++ b/frontend/stylesheets/results-charts.scss
@@ -2,8 +2,8 @@
 .results-charts {
   .curve-header {
     padding-bottom: 3px;
-    margin-left: 10px;
-    margin-right: 10px;
+    // margin-: 10px;
+    // margin-right: 10px;
     .row {
       margin-top: 0;
       margin-bottom: 0;
@@ -11,9 +11,6 @@
     .curve-title {
       display: inline-block; //width: 70%;
       cursor: pointer;
-      font-size: 30pt;
-      line-height: 35pt;
-      padding-top:13pt;
       img {
         display: inline-block;
         margin-top: -5px;
@@ -125,8 +122,8 @@
     }
   }
   .axis .tick text {
-    font-family: "dinot-regular";
-    font-size: 10px;
+    // font-family: "dinot-regular";
+    // font-size: 10px;
   }
   .x-axis-text {
     // font-family: 'Open Sans';
