--- a/frontend/stylesheets/standard-curve-chart.css.scss
+++ b/frontend/stylesheets/standard-curve-chart.css.scss
@@ -165,8 +165,8 @@
         background-color: white;
         color: black;
         padding: 6px;
-        font-size: 16px;
-        font-family: 'dinot-regular';
+        // font-size: 16px;
+        // font-family: 'dinot-regular';
         //font-weight: 300;
         border: none;
         cursor: pointer;
