responsive graph panel working

--- a/frontend/javascripts/app/views/directives/chart-well-switch.html
+++ b/frontend/javascripts/app/views/directives/chart-well-switch.html
@@ -16,8 +16,8 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<div class="chart-well-switch">
-  <table>
+<div class="chart-well-switch" style="height: 100%; display: block; overflow: auto; ">
+  <table style="height: 100%">
     <tbody>
       <tr>
         <th class="col-header G2" ng-mousedown="dragStart($event, 'corner', 0)" ng-style="{width: row_header_width + 'px'}"></th>
